--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
 output: github_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 [![Travis build status](https://travis-ci.org/mhesselbarth/SHAR.svg?branch=master)](https://travis-ci.org/mhesselbarth/SHAR)
@@ -19,14 +21,14 @@ knitr::opts_chunk$set(
 ```
 # SHAR
 
-The goal of SHAR is to ...
+SHAR is a R package for analyzing species habitat associations. Therefore, information about the location of the species is needed (as a point pattern) and about the environmental conditions (as a raster map). In order to analyse the data for significant habitat associations either the location data or the environmental data is randomized n-times. Then, counts within the habitats are compared between the randomized data and the observed data. Positive or negative associations are present if the observed counts is higher or lower than the randomized counts (using quantile thresholds). Methods are mainly described in Plotkin et al. (2000), Harms et al. (2001) and Wiegand & Moloney (2014). SHAR is mainly based on the `spatstat` (Baddeley et al. 2015) and `raster` (Hijmans 2017) package.
 
 ## Installation
 
 You can install the released version of SHAR from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-install.packages("SHAR")
+install.packages("SHAR") # Nope, not yet...
 ```
 
 And the development version from [GitHub](https://github.com/) with:
@@ -35,26 +37,55 @@ And the development version from [GitHub](https://github.com/) with:
 # install.packages("devtools")
 devtools::install_github("mhesselbarth/SHAR")
 ```
-## Example
+## How to use SHAR
 
-This is a basic example which shows you how to solve a common problem:
+SHAR comes with build-in example data sets. `landscape` contains examplary continious environmental data. However, all methods depend on discrete data. Therefore we need to classify the data first. 
 
-```{r example}
-## basic example code
+```{r environmental data, message = FALSE}
+library(SHAR)
+library(raster)
+
+landscape_classified <- classify_habitats(raster = landscape, classes = 5)
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+`species_a` and `species_b` are examplary location of species, e.g. trees, as `ppp`-objects from the `spatstat` package.
 
-```{r cars}
-summary(cars)
+There are two possibilities to randomize the environmental data, both described in Harms et al. (2001). The first shifts the habitat map in all 4 cardinal directions around a torus. The second one assigns the habitat values to an empty map using a random walk algorithm. 
+
+```{r habitat random}
+torus_trans <- translate_raster(raster = landscape_classified)
+
+random_walk <- randomize_raster(raster = landscape_classified, n_random = 39) # takes some time
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
+To randomize the point pattern, either use the Gamma test described by Plotkin et al. (2000) or pattern reconstruction (Tscheschel & Stoyan 2006) . 
 
-You can also embed plots, for example:
+```{r pattern random}
+gamma_test <- fit_point_process(pattern = species_a, process = "poisson", n_random = 39)
 
-```{r pressure, echo = FALSE}
-plot(pressure)
+reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 1000, n_random = 39) # takes some time
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
+The data was created that `species_a` has a negative association to habitat 4 and `species_b` has a positive association to habitat 5. At one point a posititive association to one habitat leads consequently to a negative association to another habitat (and vice versa). All this can be seen in the results.
+
+```{r results}
+results_habitat_association(pattern = species_a, raster = torus_trans)
+results_habitat_association(pattern = species_b, raster = random_walk)
+
+results_habitat_association(pattern = gamma_test, raster = landscape_classified)
+results_habitat_association(pattern = reconstruct, raster = landscape_classified)
+
+```
+
+## References 
+Baddeley, A., Rubak, E., Turner, R. (2015). Spatial Point Patterns: Methodology and Applications with R. London:Chapman and Hall/CRC Press, 2015. http://www.crcpress.com/Spatial-Point-Patterns-Methodology-and-Applications-with-R/Baddeley-Rubak-Turner/9781482210200/
+
+Harms, K. E., Condit, R., Hubbell, S. P., & Foster, R. B. (2001). Habitat associations of trees and shrubs in a 50-ha neotropical forest plot. Journal of Ecology, 89(6), 947–959.
+
+Hijmans, R. J. (2017). raster: Geographic Data Analysis and Modeling. R package version 2.6-7. https://CRAN.R-project.org/package=raster
+
+Plotkin, J. B., Potts, M. D., Leslie, N., Manokaran, N., LaFrankie, J. V., & Ashton, P. S. (2000). Species-area curves, spatial aggregation, and habitat specialization in tropical forests. Journal of Theoretical Biology, 207(1), 81–99.
+
+Tscheschel, A., & Stoyan, D. (2006). Statistical reconstruction of random point patterns. Computational Statistics and Data Analysis, 51(2), 859–871.
+
+Wiegand, T., & Moloney, K. A. (2014). Handbook of spatial point-pattern analysis in ecology. Boca Raton: Chapman and Hall/CRC Press.
