--- a/README.Rmd
+++ b/README.Rmd
@@ -63,7 +63,7 @@ To randomize the point pattern, either use the Gamma test described by Plotkin e
 ```{r pattern random}
 gamma_test <- fit_point_process(pattern = species_a, process = "poisson", n_random = 39)
 
-reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 1000, n_random = 39) # takes some time
+reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 2500, n_random = 39) # takes some time
 ```
 
 The data was created that `species_a` has a negative association to habitat 4 and `species_b` has a positive association to habitat 5. At one point a posititive association to one habitat leads consequently to a negative association to another habitat (and vice versa). All this can be seen in the results.
@@ -75,6 +75,14 @@ results_habitat_association(pattern = species_b, raster = random_walk)
 results_habitat_association(pattern = gamma_test, raster = landscape_classified)
 results_habitat_association(pattern = reconstruct, raster = landscape_classified)
 
+```
+
+Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
+
+```{r plot random pattern}
+plot_randomized_pattern(reconstruct)
+
+calculate_energy(reconstruct)
 ```
 
 ## References 
