--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
-output: github_document
+output:
+  github_document:
+    html_preview: false
 editor_options: 
   chunk_output_type: console
 ---
@@ -27,13 +29,13 @@ SHAR is a R package for analyzing species habitat associations. Therefore, infor
 
 You can install the released version of SHAR from [CRAN](https://CRAN.R-project.org) with:
 
-``` r
+```{r install_CRAN, eval = FALSE}
 install.packages("SHAR") # Nope, not yet...
 ```
 
 And the development version from [GitHub](https://github.com/) with:
 
-``` r
+```{r install_github, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("mhesselbarth/SHAR")
 ```
@@ -41,7 +43,7 @@ devtools::install_github("mhesselbarth/SHAR")
 
 SHAR comes with build-in example data sets. `landscape` contains examplary continious environmental data. However, all methods depend on discrete data. Therefore we need to classify the data first. 
 
-```{r environmental data, message = FALSE}
+```{r environmental_data, message = FALSE}
 library(SHAR)
 library(raster)
 
@@ -52,7 +54,7 @@ landscape_classified <- classify_habitats(raster = landscape, classes = 5)
 
 There are two possibilities to randomize the environmental data, both described in Harms et al. (2001). The first shifts the habitat map in all 4 cardinal directions around a torus. The second one assigns the habitat values to an empty map using a random walk algorithm. 
 
-```{r habitat random}
+```{r habitat_random}
 torus_trans <- translate_raster(raster = landscape_classified)
 
 random_walk <- randomize_raster(raster = landscape_classified, n_random = 39) # takes some time
@@ -60,7 +62,7 @@ random_walk <- randomize_raster(raster = landscape_classified, n_random = 39) # 
 
 To randomize the point pattern, either use the Gamma test described by Plotkin et al. (2000) or pattern reconstruction (Tscheschel & Stoyan 2006) . 
 
-```{r pattern random}
+```{r pattern_random}
 gamma_test <- fit_point_process(pattern = species_a, process = "poisson", n_random = 39)
 
 reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 2500, n_random = 39) # takes some time
@@ -70,16 +72,16 @@ The data was created that `species_a` has a negative association to habitat 4 an
 
 ```{r results}
 results_habitat_association(pattern = species_a, raster = torus_trans)
-results_habitat_association(pattern = species_b, raster = random_walk)
+# results_habitat_association(pattern = species_b, raster = random_walk)
 
-results_habitat_association(pattern = gamma_test, raster = landscape_classified)
+# results_habitat_association(pattern = gamma_test, raster = landscape_classified)
 results_habitat_association(pattern = reconstruct, raster = landscape_classified)
 
 ```
 
 Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
 
-```{r plot random pattern}
+```{r plot_random_pattern}
 plot_randomized_pattern(reconstruct)
 
 calculate_energy(reconstruct)
