--- a/README.Rmd
+++ b/README.Rmd
@@ -52,7 +52,7 @@ landscape_classified <- classify_habitats(raster = landscape, classes = 5)
 
 There are two possibilities to randomize the environmental data, both described in Harms et al. (2001). The first shifts the habitat map in all 4 cardinal directions around a torus. The second one assigns the habitat values to an empty map using a random walk algorithm. 
 
-```{r habitat_random, eval = FALSE}
+```{r habitat_random}
 torus_trans <- translate_raster(raster = landscape_classified)
 
 random_walk <- randomize_raster(raster = landscape_classified, n_random = 19) # takes some time
@@ -60,7 +60,7 @@ random_walk <- randomize_raster(raster = landscape_classified, n_random = 19) # 
 
 To randomize the point pattern, either use the Gamma test described by Plotkin et al. (2000) or pattern reconstruction (Tscheschel & Stoyan 2006) . 
 
-```{r pattern_random, eval = FALSE}
+```{r pattern_random}
 gamma_test <- fit_point_process(pattern = species_a, process = "poisson", n_random = 19)
 
 reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 1000, n_random = 19) # takes some time
@@ -68,7 +68,7 @@ reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 1000, n_rando
 
 The data was created that `species_a` has a negative association to habitat 4 and `species_b` has a positive association to habitat 5. At one point a posititive association to one habitat leads consequently to a negative association to another habitat (and vice versa). All this can be seen in the results.
 
-```{r results, eval = FALSE}
+```{r results}
 results_habitat_association(pattern = species_a, raster = torus_trans)
 # results_habitat_association(pattern = species_b, raster = random_walk)
 
@@ -79,7 +79,7 @@ results_habitat_association(pattern = reconstruct, raster = landscape_classified
 
 Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
 
-```{r plot_random_pattern, eval = FALSE}
+```{r plot_random_pattern}
 plot_randomized_pattern(reconstruct)
 
 calculate_energy(reconstruct)
