--- a/README.Rmd
+++ b/README.Rmd
@@ -13,9 +13,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-[![Travis build status](https://travis-ci.org/r-spatialecology/SHAR.svg?branch=development)](https://travis-ci.org/r-spatialecology/SHAR)
-[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/r-spatialecology/SHAR?branch=development&svg=true)](https://ci.appveyor.com/project/r-spatialecology/SHAR)
-[![Coverage status](https://codecov.io/gh/r-spatialecology/SHAR/branch/development/graph/badge.svg)](https://codecov.io/gh/r-spatialecology/SHAR?branch=development)
+[![Travis build status](https://travis-ci.org/r-spatialecology/SHAR.svg?branch=master)](https://travis-ci.org/r-spatialecology/SHAR)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/r-spatialecology/SHAR?branch=master&svg=true)](https://ci.appveyor.com/project/r-spatialecology/SHAR)
+[![Coverage status](https://codecov.io/gh/r-spatialecology/SHAR/branch/master/graph/badge.svg)](https://codecov.io/gh/r-spatialecology/SHAR?branch=master)
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![lifecycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 
@@ -50,20 +50,32 @@ landscape_classified <- classify_habitats(raster = landscape, classes = 5)
 
 `species_a` and `species_b` are examplary location of species, e.g. trees, as `ppp`-objects from the `spatstat` package.
 
-There are two possibilities to randomize the environmental data, both described in Harms et al. (2001). The first shifts the habitat map in all 4 cardinal directions around a torus. The second one assigns the habitat values to an empty map using a random walk algorithm. 
+There are two possibilities to randomize the environmental data, both described in Harms et al. (2001). The first shifts the habitat map in all 4 cardinal directions around a torus. The second one assigns the habitat values to an empty map using a random walk algorithm. Both functions return a list with randomized rasters and the observed one.
 
 ```{r habitat_random}
 torus_trans <- translate_raster(raster = landscape_classified)
 
-random_walk <- randomize_raster(raster = landscape_classified, n_random = 19) # takes some time
+random_walk <- randomize_raster(raster = landscape_classified, n_random = 19)
 ```
 
-To randomize the point pattern, either use the Gamma test described by Plotkin et al. (2000) or pattern reconstruction (Tscheschel & Stoyan 2006) . 
+```{r plot_habitat_random, echo = FALSE}
+plot(raster::stack(random_walk)[[c(1,2,3, 20)]])
+```
+
+To randomize the point pattern, either use the Gamma test described by Plotkin et al. (2000) or pattern reconstruction (Tscheschel & Stoyan 2006). 
 
 ```{r pattern_random}
 gamma_test <- fit_point_process(pattern = species_a, process = "poisson", n_random = 19)
 
 reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 1000, n_random = 19) # takes some time
+```
+
+Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
+
+```{r plot_random_pattern}
+plot_randomized_pattern(reconstruct)
+
+calculate_energy(reconstruct)
 ```
 
 The data was created that `species_a` has a negative association to habitat 4 and `species_b` has a positive association to habitat 5. At one point a posititive association to one habitat leads consequently to a negative association to another habitat (and vice versa). All this can be seen in the results.
@@ -75,14 +87,6 @@ results_habitat_association(pattern = species_a, raster = torus_trans)
 # results_habitat_association(pattern = gamma_test, raster = landscape_classified)
 results_habitat_association(pattern = reconstruct, raster = landscape_classified)
 
-```
-
-Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
-
-```{r plot_random_pattern}
-plot_randomized_pattern(reconstruct)
-
-calculate_energy(reconstruct)
 ```
 
 ## References 
