--- a/README.Rmd
+++ b/README.Rmd
@@ -58,8 +58,8 @@ torus_trans <- translate_raster(raster = landscape_classified)
 random_walk <- randomize_raster(raster = landscape_classified, n_random = 19)
 ```
 
-```{r plot_habitat_random, echo = FALSE}
-plot(raster::stack(random_walk)[[c(1,2,3, 20)]])
+```{r plot_habitat_random, echo = FALSE, fig.width = 5, fig.height = 3.5}
+plot(raster::stack(random_walk)[[c(20, 1, 2, 3)]], legend = FALSE, cex = 0.5)
 ```
 
 To randomize the point pattern, either use the Gamma test described by Plotkin et al. (2000) or pattern reconstruction (Tscheschel & Stoyan 2006). 
@@ -72,7 +72,7 @@ reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 1000, n_rando
 
 Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
 
-```{r plot_random_pattern}
+```{r plot_random_pattern,  fig.width = 12, fig.height = 5}
 plot_randomized_pattern(reconstruct)
 
 calculate_energy(reconstruct)
