--- a/README.Rmd
+++ b/README.Rmd
@@ -77,9 +77,9 @@ reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 500, n_random
 Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
 
 ```{r plot_random_pattern,  fig.width = 12, fig.height = 5}
-plot_randomized_pattern(reconstruct)
+plot_randomized_pattern(reconstruct, verbose = FALSE)
 
-calculate_energy(reconstruct)
+calculate_energy(reconstruct, verbose = FALSE)
 ```
 
 The data was created that `species_a` has a negative association to habitat 4 and `species_b` has a positive association to habitat 5. At one point a posititive association to one habitat leads consequently to a negative association to another habitat (and vice versa). All this can be seen in the results.
