--- a/README.Rmd
+++ b/README.Rmd
@@ -6,10 +6,7 @@ output: github_document
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  fig.path = "man/figures/README-"
 )
 ```
 
@@ -30,26 +27,26 @@ knitr::opts_chunk$set(
 
 You can install the released version of **shar** from [CRAN](https://CRAN.R-project.org) with:
 
-```{r install_CRAN, eval = FALSE}
+```{r install-CRAN, eval = FALSE}
 install.packages("shar")
 ```
 
 And the development version from [GitHub](https://github.com/r-spatialecology/shar) with:
 
-```{r install_github, eval = FALSE}
+```{r install-github, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("r-spatialecology/shar")
 ```
 ## How to use shar
 
-```{r import_libs, message = FALSE}
+```{r import-libs, message = FALSE}
 library(shar)
 library(raster)
 ```
 
 **shar** comes with build-in example data sets. `species_a` and `species_b` are examplary location of species, e.g. trees, as `ppp`-objects from the `spatstat` package. `landscape` contains examplary continious environmental data. However, all methods depend on discrete data. Therefore we need to classify the data first. 
 
-```{r environmental_data}
+```{r environmental-data}
 landscape_classified <- classify_habitats(raster = landscape, classes = 5)
 ```
 
@@ -61,14 +58,14 @@ torus_trans <- translate_raster(raster = landscape_classified, verbose = FALSE)
 random_walk <- randomize_raster(raster = landscape_classified, n_random = 19, verbose = FALSE)
 ```
 
-```{r plot_habitat_random, echo = FALSE, fig.width = 5, fig.height = 3.5}
-plot(raster::stack(random_walk)[[c(20, 1, 2, 3)]], legend = FALSE, cex = 0.5, 
+```{r plot_habitat-random, echo = FALSE, fig.width = 6.5, fig.height = 5, fig.align = "center"}
+plot(raster::stack(random_walk)[[c(20, 1, 2, 3)]], legend = FALSE, cex = 0.5,
      col = c("#2B83BA", "#ABDDA4", "#FFFFBF", "#FDAE61", "#D7191C"))
 ```
 
 To randomize the point pattern, either use the Gamma test described by Plotkin et al. (2000) or pattern reconstruction (Tscheschel & Stoyan 2006). 
 
-```{r pattern_random}
+```{r pattern-random}
 gamma_test <- fit_point_process(pattern = species_a, process = "cluster", n_random = 19, verbose = FALSE)
 
 reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 500, n_random = 19, verbose = FALSE) # takes some time
@@ -76,9 +73,11 @@ reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 500, n_random
 
 Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
 
-```{r plot_random_pattern,  fig.width = 12, fig.height = 5}
+```{r plot-random_pattern, fig.width = 6.5, fig.height = 4.5, fig.align = "center"}
 plot_randomized_pattern(reconstruct, verbose = FALSE)
+```
 
+```{r calculate-energy}
 calculate_energy(reconstruct, verbose = FALSE)
 ```
 
