--- a/vignettes/background.Rmd
+++ b/vignettes/background.Rmd
@@ -14,8 +14,13 @@ There are mainly two methods that can be found in the literature to analyse such
 
 All methods compare the abundance within a habitat between the observed data and the randomized null model data. If the count is below or above a pre-set threshold (e.g. the 2.5th and 97.5th quantiles), negative or positive associations, respectively, are present.
 
-### Gamma-test
-The gamma-test (Plotkin et al. 2000) randomizes the data by fitting a point process model to the observed data and simulation n random point patterns using the fitted point process model. However, the method only works for point patterns that can be described by a theoretical point process model. To use this method in **shar** use `fit_point_process()`.
+```{r overview-methods, echo = FALSE, out.height = "100%", out.width = "100%", fig.align = "center"}
+knitr::include_graphics("methods_overview.png")
+```
+
+## Randomize environmental data
+
+The following two methods randomize the environmental data, i.e. the RasterLayer data, while keeping the point pattern data fixed.
 
 ### Torus-translation-test
 The torus-translation test (Harms et al. 2001) shifts the habitat map in all four cardinal directions around a torus. This is only possible for square rasters. To use this method in **shar** use `translate_raster()`.
@@ -23,11 +28,28 @@ The torus-translation test (Harms et al. 2001) shifts the habitat map in all fou
 ### Randomized-habitats procedure
 The randomze-habitats procedure (Harms et al. 2001) is also possible for non-square raster and randomizes the habitats using a random-walk algorithm. To use this method in **shar** use `randomize_raster()`.
 
-### Pattern reconstruction
-Pattern reconstruction (Tscheschel & Stoyan 2006) randomizes the point pattern using simulated annealing (Kirkpatrick et al. 1983). This allows to randomize also complex point patterns without a theoretical point process model. To use this method in **shar** use `reconstruct_pattern()`
+```{r random-walk, echo = FALSE, out.height = "35%", out.width = "35%", fig.align = "center"}
+knitr::include_graphics("random_walk.gif")
+```
 
-<img src="methods.png" align="center" width = 700 height = 150 />
-  
+## Randomize point pattern data
+
+Contrastingly to the two methods described above, the following two methods randomize the point pattern data, while keeping the environmental data fixed.
+
+```{r gamma-vs-reconstrution, echo = FALSE, out.height = "75%", out.width = "75%", fig.align = "center"}
+knitr::include_graphics("gamma_vs_reconstruction.png")
+```
+
+### Gamma-test
+The gamma-test (Plotkin et al. 2000) randomizes the data by fitting a point process model to the observed data and simulation n random point patterns using the fitted point process model. However, the method only works for point patterns that can be described by a theoretical point process model. To use this method in **shar** use `fit_point_process()`.
+
+### Pattern reconstruction
+Pattern reconstruction (Tscheschel & Stoyan 2006) randomizes the point pattern using simulated annealing (Kirkpatrick et al. 1983). This allows to randomize also complex point patterns without a theoretical point process model. To use this method in **shar** use `reconstruct_pattern()`.
+
+```{r pattern-reconstruction, echo = FALSE, out.height = "75%", out.width = "75%", fig.align = "center"}
+knitr::include_graphics("pattern_reconstruction.gif")
+```
+
 #### References 
 Comita, L. S., Condit, R., & Hubbell, S. P. (2007). Developmental changes in habitat associations of tropical trees. Journal of Ecology, 95(3), 482–492.
 
