--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-You can install the released version of **shar** from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of **shar** from [CRAN](https://cran.r-project.org/web/packages/shar/index.html) with:
 
 ```{r install-CRAN, eval = FALSE}
 install.packages("shar")
