--- a/vignettes/publication_record.Rmd
+++ b/vignettes/publication_record.Rmd
@@ -3,7 +3,7 @@ title: "Publication record"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Publications}
+  %\VignetteIndexEntry{Publication record}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
