--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,9 @@ random_walk <- randomize_raster(raster = landscape_classified, n_random = 19, ve
 ```
 
 ```{r plot_habitat-random, fig.width = 5.5, fig.height = 4, fig.align = "center"}
-plot_randomized_raster(torus_trans, n = 3)
+col = c("#440154FF", "#3B528BFF", "#21908CFF", "#5DC863FF", "#FDE725FF")
+
+plot_randomized_raster(torus_trans, n = 3, col = col)
 ```
 
 To randomize the point pattern, either use the Gamma test described by Plotkin et al. (2000) or pattern reconstruction (Tscheschel & Stoyan 2006). 
